--- a/styles.css
+++ b/styles.css
@@ -10,3 +10,7 @@ h2{
 .po {
     color:green
 }
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+body{
+    font-family: 'Poppins', sans-serif;
+}
